Updated the POM and added the logic to read data from facebook.

--- a/personality-analytics/pom.xml
+++ b/personality-analytics/pom.xml
@@ -57,6 +57,13 @@
 			<artifactId>jettison</artifactId>
 			<version>1.1</version>
 		</dependency>
+		
+		<!-- RestFB -->
+		<dependency>
+			<groupId>com.restfb</groupId>
+			<artifactId>restfb</artifactId>
+			<version>1.18.1</version>
+		</dependency>
 
 	</dependencies>
 
