Complete code. Check in

--- a/personality-analytics/pom.xml
+++ b/personality-analytics/pom.xml
@@ -5,10 +5,12 @@
 	<artifactId>personality-analytics</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
-<properties>
-		<!-- Explicitly declaring the source encoding eliminates the following message: -->
-		<!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered resources, i.e. build is platform dependent! -->
+
+	<properties>
+		<!-- Explicitly declaring the source encoding eliminates the following 
+			message: -->
+		<!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
+			resources, i.e. build is platform dependent! -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- maven plugin versions -->
@@ -57,12 +59,19 @@
 			<artifactId>jettison</artifactId>
 			<version>1.1</version>
 		</dependency>
-		
+
 		<!-- RestFB -->
 		<dependency>
 			<groupId>com.restfb</groupId>
 			<artifactId>restfb</artifactId>
 			<version>1.18.1</version>
+		</dependency>
+
+		<!-- Common Logging -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
 		</dependency>
 
 	</dependencies>
